fix dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,7 @@
     --border-color: #f3f4f6;
     --border-color-2: #e5e7eb;
     --shape-neutral: #f3f4f6;
+    --text-icon: #6b7280;
   }
   .dark {
     --grey-2: #777777;
@@ -55,6 +56,7 @@
     --secondary-100: #fef6dc;
     --border-color: #f9fafb;
     --shape-neutral: #f3f4f6;
+    --text-icon: #ffffff;
   }
   .light-1 {
     --grey-2: #777777;
@@ -223,6 +225,7 @@
 
 .user-dropdown .ant-dropdown-menu-item {
   border-bottom: 1px solid var(--border-color-2);
+  border-radius: 0 !important;
 }
 
 .user-dropdown .ant-dropdown-menu-item:last-child {
@@ -248,4 +251,14 @@
 }
 .ant-select-arrow {
   top: 70% !important;
+}
+
+.ant-dropdown-menu {
+  background-color: var(--main-background) !important;
+  color: var(--text-primary) !important;
+}
+
+.disabled-input,
+.ant-select-selector {
+  color: var(--text-primary) !important;
 }
